# parallel-executions

./: CMakeLists.txt  POSIX_singlecore_scheduler.cpp  README.md  dockerfile  producer_consumer.cpp  scalable_task_processing.cpp  sync_schedule_thread.cpp  sync_schedule_threads.cpp  sync_seqential_execution.cpp  sync_sequential_execution.cpp  sync_threads.cpp  sync_threads_all.cpp  sync_threads_one.cpp  sync_vector.cpp  task_scaler.cpp  task_scaler.h  timer.hpp  ts_vector.hpp
.github/workflows/: github-actions-demo.yml
CPP/: mem_alignment.c  thread_pool.cpp
OpenMP/: montecarlo_integration_algorithm.c  snippet0.c  snippet1.c  snippet2.c  snippet3.c  snippet4.1.c  snippet4.c  snippet5-mandel.c  snippet6-linked.c  snippet7.c  snippet8-linked_tasks.c
OpenMP/theory_draft/: theory-draft.md
doc/theory_draft/: theory-draft.md
drafts/: sync_threads_one.cpp
